--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "GPL-3.0-only",
   "private": true,
   "scripts": {
-    "test": "mocha --require @babel/register",
+    "test": "jest",
     "build": "webpack"
   },
   "repository": {
@@ -14,13 +14,23 @@
   "author": "Teresa Ou",
   "license": "GPL",
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/register": "^7.9.0",
-    "chai": "^4.2.0",
-    "mocha": "^7.1.1",
+    "@babel/plugin-transform-modules-commonjs": "^7.9.6",
+    "jest": "^26.0.1",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "jest": {
+    "modulePaths": [
+      "/shared/vendor/modules"
+    ],
+    "moduleFileExtensions": [
+      "js"
+    ],
+    "moduleDirectories": [
+      "node_modules",
+      "bower_components",
+      "shared"
+    ]
+  }
 }
