--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "inboxy",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "GPL-3.0-only",
   "private": true,
   "scripts": {
@@ -14,12 +14,12 @@
   "author": "Teresa Ou",
   "license": "GPL",
   "devDependencies": {
+    "@babel/core": "^7.18.9",
     "@babel/plugin-transform-modules-commonjs": "^7.9.6",
     "jest": "^26.0.1",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
-  "dependencies": {},
   "jest": {
     "modulePaths": [
       "/shared/vendor/modules"
